[gd_scene load_steps=18 format=3 uid="uid://djtjqkmdep3dh"]

[ext_resource type="Script" path="res://Scripts/MapSpot.gd" id="1_x7uyn"]
[ext_resource type="FontFile" uid="uid://d3evvotf2wqa3" path="res://Fonts/Play-Bold.ttf" id="2_uoroi"]
[ext_resource type="StyleBox" uid="uid://dv72od2tskfeh" path="res://Theme/DarkBluePanel.tres" id="3_rw3e8"]
[ext_resource type="Theme" uid="uid://blxde2llpapdx" path="res://Theme/DarkBlueButtonCirlce.tres" id="3_yi1as"]
[ext_resource type="Theme" uid="uid://cgma68ateq86o" path="res://Theme/DarkBlueButton.tres" id="4_1yydb"]
[ext_resource type="Texture2D" uid="uid://bdwodqqgqr3nd" path="res://Assets/village.png" id="4_poyhe"]
[ext_resource type="Texture2D" uid="uid://b3g3ju4xwuygm" path="res://Assets/Light.png" id="7_fu61o"]

[sub_resource type="CanvasItemMaterial" id="CanvasItemMaterial_lj723"]
light_mode = 1

[sub_resource type="CanvasItemMaterial" id="CanvasItemMaterial_ic8cr"]
light_mode = 1

[sub_resource type="CanvasItemMaterial" id="CanvasItemMaterial_i403d"]
light_mode = 1

[sub_resource type="CircleShape2D" id="CircleShape2D_4ymfd"]
radius = 34.0588

[sub_resource type="CanvasItemMaterial" id="CanvasItemMaterial_ea5qq"]
light_mode = 1

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_n1suc"]
resource_local_to_scene = true
bg_color = Color(0.252517, 0.622353, 0.846633, 1)
draw_center = false
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5
border_color = Color(0, 0.572225, 0.290914, 1)
border_blend = true
corner_radius_top_left = 1024
corner_radius_top_right = 1024
corner_radius_bottom_right = 1024
corner_radius_bottom_left = 1024
corner_detail = 20
anti_aliasing = false

[sub_resource type="Animation" id="Animation_pxthd"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("PanelContainer2:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("PanelContainer2:theme_override_styles/panel:expand_margin_left")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("PanelContainer2:theme_override_styles/panel:expand_margin_top")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("PanelContainer2:theme_override_styles/panel:expand_margin_right")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("PanelContainer2:theme_override_styles/panel:expand_margin_bottom")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("PanelContainer2:theme_override_styles/panel:border_color")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(0, 0.572225, 0.290914, 1)]
}

[sub_resource type="Animation" id="Animation_ph3na"]
resource_name = "SpotAnalyzed"
length = 5.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("PanelContainer2:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 4.76667, 5),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [true, true, false]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("PanelContainer2:theme_override_styles/panel:expand_margin_left")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 4.73333),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.0, 500.0]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("PanelContainer2:theme_override_styles/panel:expand_margin_top")
tracks/2/interp = 2
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 4.73333),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.0, 500.0]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("PanelContainer2:theme_override_styles/panel:expand_margin_right")
tracks/3/interp = 2
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 4.73333),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.0, 500.0]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("PanelContainer2:theme_override_styles/panel:expand_margin_bottom")
tracks/4/interp = 2
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0, 4.73333),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.0, 500.0]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("PanelContainer2:theme_override_styles/panel:border_color")
tracks/5/interp = 2
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0, 4.06667, 4.73333),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(0.0486369, 0.645335, 0.0400367, 1), Color(0.0486369, 0.645335, 0.0400367, 1), Color(0.049, 0.645, 0.04, 0)]
}

[sub_resource type="Animation" id="Animation_fxdlk"]
resource_name = "SpotFound"
length = 5.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("PanelContainer2:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 4.76667, 5),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [true, true, false]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("PanelContainer2:theme_override_styles/panel:expand_margin_left")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 4.73333),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.0, 500.0]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("PanelContainer2:theme_override_styles/panel:expand_margin_top")
tracks/2/interp = 2
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 4.73333),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.0, 500.0]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("PanelContainer2:theme_override_styles/panel:expand_margin_right")
tracks/3/interp = 2
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 4.73333),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.0, 500.0]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("PanelContainer2:theme_override_styles/panel:expand_margin_bottom")
tracks/4/interp = 2
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0, 4.73333),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.0, 500.0]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("PanelContainer2:theme_override_styles/panel:border_color")
tracks/5/interp = 2
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0, 4.06667, 4.73333),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(0.252517, 0.622353, 0.846633, 1), Color(0.252517, 0.622353, 0.846633, 1), Color(0.253, 0.622, 0.847, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_4iew2"]
_data = {
"RESET": SubResource("Animation_pxthd"),
"SpotAnalyzed": SubResource("Animation_ph3na"),
"SpotFound": SubResource("Animation_fxdlk")
}

[node name="MapSpot" type="Node2D"]
script = ExtResource("1_x7uyn")

[node name="AnalyzeButton" type="Button" parent="." groups=["Buttons"]]
show_behind_parent = true
texture_filter = 6
material = SubResource("CanvasItemMaterial_lj723")
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -34.0
offset_top = -34.0
offset_right = 34.0
offset_bottom = 34.0
grow_horizontal = 2
grow_vertical = 2
focus_mode = 0
theme = ExtResource("3_yi1as")
theme_override_fonts/font = ExtResource("2_uoroi")
theme_override_font_sizes/font_size = 22

[node name="TextureRect" type="TextureRect" parent="."]
modulate = Color(1, 1, 1, 0.3)
material = SubResource("CanvasItemMaterial_ic8cr")
offset_left = -32.0
offset_top = -100.0
offset_right = 32.0
offset_bottom = -36.0
texture = ExtResource("4_poyhe")

[node name="LandButtonContainer" type="PanelContainer" parent="."]
material = SubResource("CanvasItemMaterial_i403d")
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -42.0
offset_top = 31.0
offset_right = 42.0
offset_bottom = 89.0
grow_horizontal = 2
mouse_filter = 2
theme_override_styles/panel = ExtResource("3_rw3e8")

[node name="LandButton" type="Button" parent="LandButtonContainer" groups=["Buttons"]]
use_parent_material = true
layout_mode = 2
theme = ExtResource("4_1yydb")
theme_override_fonts/font = ExtResource("2_uoroi")
theme_override_font_sizes/font_size = 22
text = "Land"

[node name="AreaNotif" type="Area2D" parent="."]
collision_layer = 8
collision_mask = 7

[node name="CollisionShape2D" type="CollisionShape2D" parent="AreaNotif"]
shape = SubResource("CircleShape2D_4ymfd")

[node name="PanelContainer2" type="PanelContainer" parent="."]
visible = false
material = SubResource("CanvasItemMaterial_ea5qq")
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_n1suc")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_4iew2")
}

[node name="PointLight2D" type="PointLight2D" parent="."]
visible = false
scale = Vector2(0.75, 0.75)
energy = 0.5
blend_mode = 2
shadow_color = Color(0.919342, 0, 0.452291, 0)
texture = ExtResource("7_fu61o")

[connection signal="pressed" from="AnalyzeButton" to="." method="_on_analyze_button_pressed"]
[connection signal="pressed" from="LandButtonContainer/LandButton" to="." method="_on_land_button_pressed"]
[connection signal="area_entered" from="AreaNotif" to="." method="AreaEntered"]
[connection signal="area_exited" from="AreaNotif" to="." method="AreaExited"]
